--- a/.github/workflows/libraryapi_CI.yml
+++ b/.github/workflows/libraryapi_CI.yml
@@ -1,31 +1,31 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: libraryapi CI
 
 on: push
 
 jobs:
-  build:
+  ci:
 
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.11", "3.12"]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
+
+    - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.11
+
     - name: Install package with dev dependencies
       run: |
         pip install .\[dev\]
+
     - name: Lint with ruff
       run: |
         ruff check src
+
     - name: Check types with mypy
       run: |
         mypy src
+
+    - name: Tests
+      run: |
+        docker compose -f tests.yml up --exit-code-from libraryapi
