--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,6 @@ disallow_untyped_defs = true
 [tool.ruff]
 line-length = 120
 
-[tool.ale]
-
 [project]
 name = "libraryapi"
 version = "0.0.1"
@@ -31,6 +29,7 @@ description = "API for online library"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi",
+    "adaptix",
     "gunicorn",
     "uvicorn",
     "sqlalchemy",
