--- a/tests.yml
+++ b/tests.yml
@@ -17,3 +17,8 @@ services:
     extends:
       file: docker-compose.yml
       service: postgres
+
+  redis:
+    extends:
+      file: docker-compose.yml
+      service: redis
